iwd web page ayarlaniyor

--- a/public/iwd2020/index.html
+++ b/public/iwd2020/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 
 <head>
     <!--
 New Event
 http://www.templatemo.com/tm-486-new-event
 -->
-    <title>IWD Bari 2019</title>
+    <title>IWD Sivas 2020</title>
     <meta name="description" content="">
     <meta name="author" content="GDG Bari">
     <meta charset="UTF-8">
@@ -47,24 +47,24 @@ http://www.templatemo.com/tm-486-new-event
             <!-- navbar header -->
             <div class="navbar-header">
                 <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-				<span class="icon icon-bar"></span>
-				<span class="icon icon-bar"></span>
-				<span class="icon icon-bar"></span>
-			</button>
-                <a href="#" class="navbar-brand">IWD Bari 2019</a>
+                    <span class="icon icon-bar"></span>
+                    <span class="icon icon-bar"></span>
+                    <span class="icon icon-bar"></span>
+                </button>
+                <a href="#" class="navbar-brand">IWD Sivas 2020</a>
             </div>
 
             <div class="collapse navbar-collapse">
 
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#intro" class="smoothScroll">Intro</a></li>
-                    <li><a href="#overview" class="smoothScroll">Overview</a></li>
-                    <li><a href="#speakers" class="smoothScroll">Speakers</a></li>
-                    <li><a href="#program" class="smoothScroll">Programs</a></li>
-                    <li><a href="#register" class="smoothScroll">Register</a></li>
-                    <li><a href="#venue" class="smoothScroll">Venue</a></li>
-                    <li><a href="#sponsors" class="smoothScroll">Sponsors</a></li>
-                    <li><a href="#contact" class="smoothScroll">Contact</a></li>
+                    <li><a href="#intro" class="smoothScroll">Giriş</a></li>
+                    <li><a href="#overview" class="smoothScroll">WTM Nedir?</a></li>
+                    <li><a href="#speakers" class="smoothScroll">Konuşmacılar</a></li>
+                    <li><a href="#program" class="smoothScroll">Akış</a></li>
+                    <li><a href="#register" class="smoothScroll">Katıl</a></li>
+                    <li><a href="#venue" class="smoothScroll">Etkinlik Alanı</a></li>
+                    <li><a href="#sponsors" class="smoothScroll">Sponsorlar</a></li>
+                    <li><a href="#contact" class="smoothScroll">İletişim</a></li>
                 </ul>
 
             </div>
@@ -80,12 +80,13 @@ http://www.templatemo.com/tm-486-new-event
         <div class="container">
             <div class="row">
 
-                <div class="col-md-12 col-sm-12">
+                <div id="intro-text" class="col-md-12 col-sm-12">
                     <img class="wow fadeInUp" data-wow-delay="0.9s" src="iwd2020/images/wtm-logo.png" height="100">
                     <h1 class="wow fadeInUp" data-wow-delay="1.8s">International Women's Day</h1>
-                    <h3 class="wow fadeInUp" data-wow-delay="1.8s">16 Marzo 2019</h3>
-                    <a href="#overview" class="btn btn-lg btn-default smoothScroll wow fadeInUp hidden-xs" data-wow-delay="2.3s">SCOPRI DI PIÙ</a>
-                    <a href="#register" class="btn btn-lg btn-danger smoothScroll wow fadeInUp" data-wow-delay="2.3s">REGISTRATI ORA</a>
+                    <h3 class="wow fadeInUp" data-wow-delay="1.8s">29 Mart 2020</h3>
+                    <a href="#overview" class="btn btn-lg btn-default smoothScroll wow fadeInUp hidden-xs" data-wow-delay="2.3s">DAHA FAZLA BİLGİ EDİNİN
+                    </a>
+                    <a href="#register" class="btn btn-lg btn-danger smoothScroll wow fadeInUp" data-wow-delay="2.3s">KAYIT!</a>
                 </div>
             </div>
         </div>
@@ -100,13 +101,18 @@ http://www.templatemo.com/tm-486-new-event
             <div class="row">
 
                 <div class="wow fadeInUp col-md-6 col-sm-6" data-wow-delay="0.1s">
-                    <h1>Tech wants Women</h1>
-                    <p>Avere una diversità di prospettive e idee porta ad un miglior processo di decision-making, a prodotti più rilevanti e rende l'ambiente tech molto più interessante.</p>
-                    <p>Women Techmakers è il programma globale di Google per le donne in ambito tecnologico. Nato nel 2012, è ora diretto da un team globale, deciso ad aumentare la visibilità delle donne nell'industria.</p>
+                    <h1>WTM Nedir?</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum totam soluta molestias, magnam accusantium consectetur necessitatibus consequatur non, accusamus temporibus dolore aliquid assumenda ex. Impedit, illum rerum. Aliquam,
+                        sunt delectus!</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid rem minus, iure beatae dicta veritatis maiores numquam doloribus dolore, minima reprehenderit sunt vitae eos qui doloremque! Ut voluptates ducimus qui.</p>
+                    <h1>IWD Nedir?</h1>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium ea aspernatur vel quo qui maiores ab dolore facilis provident, eius harum voluptatum velit quae a fuga eveniet dolores magnam doloribus!
+                    </p>
                 </div>
 
                 <div class="wow fadeInUp col-md-6 col-sm-6" data-wow-delay="0.3s">
-                    <img src="iwd2020/images/overview-img.jpg" class="img-responsive" alt="Overview">
+                    <img src="iwd2020/images/wtm1.jpg" class="img-responsive" alt="Overview">
                 </div>
 
             </div>
@@ -122,20 +128,20 @@ http://www.templatemo.com/tm-486-new-event
             <div class="row">
                 <div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="0.3s">
                     <i class="fa fa-group"></i>
-                    <h3>100+ Eventi</h3>
-                    <p>Organizzati in tutto il mondo per IWD 2019.</p>
+                    <h3>300+ Katilimci ile</h3>
+                    <p>IWD2020 Sivas'da organize ediliyor.</p>
                 </div>
 
                 <div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="0.6s">
                     <i class="fa fa-clock-o"></i>
-                    <h3>8 ore</h3>
-                    <p>Un'intera giornata di talk e workshop sulle nuove tecnologie.</p>
+                    <h3>6 saat</h3>
+                    <p>Yeni teknolojiler üzerine konuşmalar ve çalıştaylar.</p>
                 </div>
 
                 <div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="0.9s">
                     <i class="fa fa-microphone"></i>
-                    <h3>6 Speakers</h3>
-                    <p>Da studenti ad esperti dell'industria per una giornata all'insegna delle nuove tecnologie.</p>
+                    <h3>4 Konuşmacı</h3>
+                    <p>Birbirinden farklı alaninda uzman konuşmacılar.</p>
                 </div>
             </div>
         </div>
@@ -149,8 +155,8 @@ http://www.templatemo.com/tm-486-new-event
         <div class="container">
             <div class="row">
                 <div class="wow fadeInUp col-md-6 col-sm-10" data-wow-delay="0.3s">
-                    <h1>Gender equality in tech</h1>
-                    <p>Dal 2014 ad oggi, Women Techmakers contiuna a incentivare iniziative di scala globale e lanciare nuovi programmi per supportare le donne nell'industria tech.</p>
+                    <h1>Teknolojide cinsiyet eşitliği</h1>
+                    <p>2014'ten bugüne, Woman Techmakers(WTM) küresel girişimleri teşvik etmeye ve teknoloji, endüstrisindeki kadınları desteklemek için yeni programlar başlatmaya devam ediyor.</p>
                 </div>
                 <div class="wow fadeInUp col-md-6 col-sm-10" data-wow-delay="0.6s">
                     <div class="embed-responsive embed-responsive-16by9">
@@ -172,7 +178,7 @@ http://www.templatemo.com/tm-486-new-event
 
                 <div class="col-md-12 col-sm-12 wow bounceIn">
                     <div class="section-title">
-                        <h2>Speakers</h2>
+                        <h2>Konuşmacılar</h2>
                     </div>
                 </div>
 
@@ -182,20 +188,20 @@ http://www.templatemo.com/tm-486-new-event
 
                     <div class="item wow fadeInUp col-md-3 col-sm-3" data-wow-delay="0.9s">
                         <div class="speakers-wrapper">
-                            <img src="iwd2020/images/speakers-gea.jpg" class="img-responsive" alt="speakers">
+                            <img src="iwd2020/images/hulya-kucukaras.jpg" class="img-responsive" alt="speakers">
                             <div class="speakers-thumb">
-                                <h3>Gea Angiulli</h3>
-                                <h6>WTM Ambassador Bari</h6>
+                                <h3>Hülya Küçükaras</h3>
+                                <h6>BMO Yönetim kurulu Başkanı</h6>
                             </div>
                         </div>
                     </div>
 
                     <div class="item wow fadeInUp col-md-3 col-sm-3" data-wow-delay="0.6s">
                         <div class="speakers-wrapper">
-                            <img src="iwd2020/images/speakers-antonella.jpg" class="img-responsive" alt="speakers">
+                            <img src="iwd2020/images/merve-arslan.jpeg" class="img-responsive" alt="speakers">
                             <div class="speakers-thumb">
-                                <h3>Antonella Comes</h3>
-                                <h6>Auriga</h6>
+                                <h3>Merve Arslan</h3>
+                                <h6>Flutter</h6>
                             </div>
                         </div>
                     </div>
@@ -413,7 +419,8 @@ http://www.templatemo.com/tm-486-new-event
                             <h4>Laura Loperfido</h4>
                             <h4>È necessario portare un PC con Arduino IDE installato.</h4>
                             <p>Arduino non è soltanto una piattaforma hardware, è anche uno strumento prezioso, perfetto per divertirsi ma anche per realizzare progetti molto utili. In questo workshop impareremo insieme come realizzare un piccolo progetto
-                                con una scheda Arduino. Non vedete l’ora di scoprire di cosa si tratta, vero? Vi aspettiamo!</p>
+                                con una scheda Arduino. Non vedete l’ora di scoprire di cosa si tratta, vero? Vi aspettiamo!
+                            </p>
                         </div>
 
                         <!-- program divider -->
