--- a/public/iwd2020/index.html
+++ b/public/iwd2020/index.html
@@ -321,18 +321,15 @@
                         <div class="col-md-10 col-sm-10">
                             <h3>WORKSHOP: Firebase</h3>
                             <h4>Emre Dipi & Erkan Ercan</h4>
-                            <h4>Bilgisayarinizi ve Sarj aletini unutmayin.</h4>
-                            <p>Kontenjan dolmadan kayit olunuz.</p>
+                            <h4>Bilgisayarınızı ve şarj aletinizi unutmayın.</h4>
+                            <p>Kontenjan dolmadan kayıt olunuz.</p>
                             <a href="https://www.meetup.com/tr-TR/GDGSivas/events/268502026/">WORKSHOP KAYIT!</a>
                         </div>
 
                         <!-- program divider -->
                         <div class="program-divider col-md-12 col-sm-12"></div>
 
-
-
                     </div>
-
                 </div>
             </div>
     </section>
